# smart-putting-tutor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  toolchain-arm64.cmake
.github/workflows/: test.yaml
include/: sample_loader.hpp  stroke_features.hpp
samples/features/: README.md  average_stroke.json  bad_stroke.json  great_stroke.json
scripts/: build.py  setup.py  test.py
src/: main.cpp  sample_loader.cpp
src/core/: stroke_features.cpp
tests/: test_stroke_features.cpp
